[package]
name = "project-h01-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
bevy_rapier2d = {version="0.31.0", features = ["simd-stable"]}
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
webrtc = { version = "0.14.0", default-features = false }

[dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
    "bevy_state",
    "bevy_log",

    # Async / Multithreading
    "std",
    "async_executor",
    "multi_threaded",

    # Asset management 
    "bevy_asset",
    "serialize",

    # System diagnostics
    "sysinfo_plugin", 
]
